PUSH NOTE : 5. Magi.md

--- a/content/1. Kompendium/5. Magi.md
+++ b/content/1. Kompendium/5. Magi.md
@@ -3,7 +3,7 @@ tags:
   - Kapitel
 share: true
 ---
-## 5. Magi
+# Att använda magi
 
 När du vill använda magi beskriver du:
 - Vilken besvärjelsedomän du vill försöka kasta
@@ -59,7 +59,7 @@ Du kallar fram ett eldklot som du slungar mot en varelse. Om den träffar tar va
 
 ###### Andra graden
 Du fokuserar ytterligare och lyckas koncentrera in energin som en magisk bomb. Välj istället en punkt inom räckvidden. Alla varelser inom 1 FE måste slå SMI mot din MMSG eller ta skadan och fatta eld som beskrivs ovan.
-### [[2. Regellexikon/5. Magi/Besvjärjelser/Frost|2. Regellexikon/5. Magi/Besvjärjelser/Frost]] 
+### Frost 
 *Arcanum*
 
 **Uppladdningstid:** 1 huvudhandling
@@ -88,7 +88,7 @@ Du lägger en förbannelse över en varelse du kan se inom räckvidden. Denna va
 #### Andra graden
 Du märker varelsen med din gudomliga energi vilket försvagar varelsens försvar. Om varelsen misslyckas med slaget oven får den -2 till deras BN.
 ### Kraft
-*Sanctum
+*Sanctum*
 
 **Uppladdningstid:** 1 huvudhandling
 
