PUSH NOTE : 4. Strid.md

--- a/content/1. Kompendium/4. Strid.md
+++ b/content/1. Kompendium/4. Strid.md
@@ -81,7 +81,7 @@ Vissa varelser är särskilt bra på att motstå olika typer av skada. Detta not
 
 Varje gång karaktären tar skada av den typen den är resistent mot, subtraheras skadan med RG, med 0 som minsta differens.
 
-## 4. Strid
+## Död och att bli nedgjord
 När en karaktär når 0 KP blir den antingen nedjord eller dör. 
 
 Karaktären **dör** om den skadan som är kvar efter att den nått 0 KP är större än hälften av  dess maximala KP. Om inte blir den nedgjord.
