PUSH NOTE : 5. Magi.md

--- a/content/1. Kompendium/5. Magi.md
+++ b/content/1. Kompendium/5. Magi.md
@@ -19,9 +19,22 @@ Efter att du har gjort det och fått godkännande från SL kan du slå för magi
 | 2                    | 18  |
 En karaktär har en mängd mana som är lika med 1+Nivå\*INT
 
-Arcanum: Eld, Frost, Magiseende, Vind, Sköld
+### Översikt
+**Arcanum**
+- [[2. Regellexikon/5. Magi/Besvjärjelser/Eld.md|Eld]]
+- [[2. Regellexikon/5. Magi/Besvjärjelser/Frost.md|Frost]]
+- [[2. Regellexikon/5. Magi/Besvjärjelser/Magiseende.md|Magiseende]]
+- [[2. Regellexikon/5. Magi/Besvjärjelser/Sköld.md|Sköld]]
+- [[2. Regellexikon/5. Magi/Besvjärjelser/Vind.md|Vind]]
 
-Sanctum: Eld, Förbanna, Kraft, Läka, Ljus
+
+**Sanctum**
+- [[2. Regellexikon/5. Magi/Besvjärjelser/Eld.md|Eld]]
+- [[2. Regellexikon/5. Magi/Besvjärjelser/Förbanna.md|Förbanna]]
+- [[2. Regellexikon/5. Magi/Besvjärjelser/Kraft.md|Kraft]]
+- [[2. Regellexikon/5. Magi/Besvjärjelser/Ljus.md|Ljus]]
+- [[2. Regellexikon/5. Magi/Besvjärjelser/Läka.md|Läka]]
+
 
 
 # Arcanum
@@ -48,35 +61,35 @@ Sanctum: Eld, Förbanna, Kraft, Läka, Ljus
 ### Eld
 *Arcanum, Sanctum*
 
-**Uppladdningstid:** 1 huvudhandling
+**Uppladdningstid:** 2 handlingar
 
 **Räckvidd:** 10 FE(15m)
 
 **Varaktighet**: Omedelbar
 
 ###### Första graden
-Du kallar fram ett eldklot som du slungar mot en varelse. Om den träffar tar varelsen 1T8 eldskada och fattar eld. Tills varelsen använder en huvudhandling för att skaka av sig elden eller på annat sätt lyckas släcka den tar den vid början av sin tur 1T4 eldskada.
+Du kallar fram ett eldklot som du slungar mot en varelse. Om den träffar tar varelsen 1T8 eldskada och fattar eld. Tills varelsen använder en handling för att skaka av sig elden eller på annat sätt lyckas släcka den tar den vid början av sin tur 1T4 eldskada.
 
 ###### Andra graden
 Du fokuserar ytterligare och lyckas koncentrera in energin som en magisk bomb. Välj istället en punkt inom räckvidden. Alla varelser inom 1 FE måste slå SMI mot din MMSG eller ta skadan och fatta eld som beskrivs ovan.
 ### Frost 
 *Arcanum*
 
-**Uppladdningstid:** 1 huvudhandling
+**Uppladdningstid:** 2 handlingar
 
 **Räckvidd:** 10 FE (15m)
 
 **Varaktighet**: Omedelbar
 
 #### Första graden
-Du kallar samman ett en froststråle mot ditt mål. Målet tar 1T6 frostskada och tappar 2 FE av sin förflyttningsförmåga till början av din nästa tur. 
+Du kallar samman ett en froststråle mot ditt mål. Målet tar 1T6 frostskada och tappar 2 FE av sin förflyttningshastighet till början av din nästa tur. 
 
 ####  Andra graden
 Styrkan i din froststråle ökar och målet måste slå STY för att inte bli fastfrusen till slutet av din nästa tur. En fastfrusen varelse kan inte ta några handlingar och attacker mot varelsen får en bonus på 1T6.
 ### Förbanna
 *Arcanum*
 
-**Uppladdningstid:** 1 huvudhandling
+**Uppladdningstid:** 2 handlingar
 
 **Räckvidd:** 2 FE (3m)
 
@@ -90,7 +103,7 @@ Du märker varelsen med din gudomliga energi vilket försvagar varelsens försva
 ### Kraft
 *Sanctum*
 
-**Uppladdningstid:** 1 huvudhandling
+**Uppladdningstid:** 2 handlingar
 
 **Räckvidd:** Beröring
 
@@ -107,7 +120,7 @@ Detta innebär att deras maximala KP ökar under varaktigheten.
 ### Ljus
 *Sanctum*
 
-**Uppladdningstid:** 1 huvudhandling
+**Uppladdningstid:** 2 handlingar
 
 **Räckvidd:** Beröring
 
@@ -121,7 +134,7 @@ Ljuset blir nästan lika starkt som solen själv. Istället för att beröra ett
 ### Läka
 *Sanctum*
 
-**Uppladdningstid:** 1 huvudhandling
+**Uppladdningstid:** 2 handlingar
 
 **Räckvidd:** Beröring
 
@@ -138,7 +151,7 @@ Din syn vidgas och du har möjlighet att läka flera varelser samtidigt. Välj 3
 ### Magiseende
 *Arcanum*
 
-**Uppladdningstid:** 1 tur
+**Uppladdningstid:** 4 handlingar
 
 **Räckvidd:** 10 FE
 
@@ -152,7 +165,7 @@ Istället för att se om föremål är magiska runt omkring dig fokuserar du ist
 ### Sköld
 *Arcanum*
 
-**Uppladdningstid:** 1 reaktion
+**Uppladdningstid:** 1 handling, Reaktion
 
 **Räckvidd:** Personlig
 
@@ -166,8 +179,10 @@ Istället för att endast skydda dig ökar skölden till att ge allt inom 1FE en
 ### Vind
 *Arcanum*
 
-**Uppladdningstid:** 1 huvudhandling
+**Uppladdningstid:** 2 handlingar
+
 **Räckvidd:** 10 FE (15m)
+
 **Varaktighet**: Omedelbar
 
 #### Första graden
