PUSH NOTE : 2. Rollfiguren.md

--- a/content/1. Kompendium/2. Rollfiguren.md
+++ b/content/1. Kompendium/2. Rollfiguren.md
@@ -17,26 +17,30 @@ Ett yrke är en rollfigurs sysselsättning, vilket definierar dess förmågor oc
 En krigare är tränad att använda alla typer av sköldar och vapen. 
 
 ###### (Förmåga: Passiv) Snabbfotad
-Din förflyttning ökar med 1 FE
+Din förflyttningshastighet ökar med 1 FE
 
-###### (Förmåga: Sidohandling) Adrenalinkick 
+###### (Förmåga: Aktiv) Adrenalinkick 
+*1 Handling*
+
 Dina år på slagfältet har lett till att du förstår att när kroppen utsätts för extrema utmaningar kan den använda sig av energireserver. När du använder din adrenalinkick får du följande effekter:
 - Du helar omedelbart KP lika ett antal T8 gånger din nivå.
-- Du får som en del av denna sidohandling slå en gång med ett valfritt vapen.
+- Du får som en del av denna handling [[Attackera (1)|Attackera]] .
 
 Efter att du fått din adrenalinkick kan du inte använda den tills du vilat i minst 1 timme.
 
 ### Spejare
 **KP-Bas**: 14
 
-**Färdigheter**: Smygande, Välj två av följande: Atletism, Spaning, Kunskap, Överlevnad
+**Färdigheter**: Smygande, Välj två av följande: Athleticism, Spaning, Kunskap, Överlevnad
 
 En spejare är tränad att använda enhandsvapen och avståndsvapen.
 
 ###### (Förmåga: Passiv) Skogsvana fötter
 Du har vandrat genom den mest kuperade skogen och de brantaste bergen. Du kan passera genom svår terräng obehindrat och kan klättra lika snabbt som du kan gå.
 
-###### (Förmåga: Reaktion) Kvicktänkt
+###### (Förmåga: Aktiv) Kvicktänkt
+*1 handling, reaktion*
+
 Vildmarken är en farlig plats som kräver rätt beslut på ett ögonblick, åtminstone om du vill överleva. När du är målet av en attack eller i träffzonen för någon förmåga som har en area kan du använda din reaktion för att kasta iväg dig själv 3 FE utan att provocera en reaktion. 
 
 ### Magiker
@@ -46,7 +50,7 @@ Vildmarken är en farlig plats som kräver rätt beslut på ett ögonblick, åtm
 
 Det enda vapnet magiker är tränade i att använda är trästaven. 
 
-Det finns många olika skolor av magin, de mest vanliga är Arcanum (Lärd magi), Sanctum(Religiös magi), Animalium(Naturmagi) och Musicum(Musikalisk magi). I detta speltest kommer endast Arcanum och Sanctum att hanteras. 
+Det finns många olika skolor av magi, de mest vanliga är **Arcanum**(Lärd magi), **Sanctum**(Religiös magi).
 
 Magiker kan alla de besvärjelser som står nedskrivna i magiskolan de tillhör (vilket återfinns i 5. Magi) och för den nivå av magiker de är, inklusive alla besvärjelser under dess nuvarande nivå. Alla magiregler återfinns i kapitel 5. Magi. 
 
@@ -60,8 +64,10 @@ Välj en besvärjelse, du får +2 i ditt magislag när du vill försöka framkal
 #### Religiös Magiker
 En religiös magikers källa är en särskild gud de har ägnat sitt liv åt. Denna gud har uppmärksammat sin följare och valt att ge den en gåva, magins konst.
 
-###### (Förmåga: Special) Gudomlig Guidning
-Du ställer en fråga till din gud och slår för INT+NIVÅ. Bereonde på resultatet ger SL dig något slags svar på frågan, även om det kanske inte alltid är helt solklart vad guden menar.
+###### (Förmåga: Aktiv) Gudomlig Guidning
+*1 minut*
+
+Du ställer en fråga till din gud och slår för INT+NIVÅ. Beroende på resultatet ger SL dig något slags svar på frågan, även om det kanske inte alltid är helt solklart vad guden menar.
 ## Tilldelande av grundegenskaper
 För att tilldela en rollfigur hur många poäng den har i varje grundegenskap ges en lista. 
 
